--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,8 +17,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: airosk.official
-    password: 21capstone3*
+    username:
+    password:
     properties:
       mail:
         smtp:
