--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
       ddl-auto: create
     properties:
       hibernate:
-        show_sql: true
+        #show_sql: true
         format_sql: true
 
   mail:
@@ -25,6 +25,10 @@ spring:
           auth: true
           starttls:
             enable: true
+  mvc:
+    hiddenmethod:
+      filter:
+        enabled: true
 
 logging:
   level:
