--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -1,5 +1,17 @@
 spring: #메모리 모드
 
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: airosk.official
+    password: tlschstntnwl2201!
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+
 logging:
   level:
     org.hibernate.SQL: debug
