QnA 조회, 상세 조회

--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -3,8 +3,8 @@ spring: #메모리 모드
   mail:
     host: smtp.gmail.com
     port: 587
-    username: airosk.official
-    password: tlschstntnwl2201!
+    username:
+    password:
     properties:
       mail:
         smtp:
