--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,9 +14,11 @@ spring:
     hibernate:
       ddl-auto: create
     properties:
+      default_batch_fetch_size:1000:
       hibernate:
         #show_sql: true
         format_sql: true
+
 
   mail:
     host: smtp.gmail.com
