--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:h2:mem:./catch-shopdb;
+    url: jdbc:h2:mem:./catch-shopdb
 #    url: jdbc:h2:tcp://localhost/~/catchshop
     username: sa
     password:
@@ -18,6 +18,7 @@ spring:
       hibernate:
         #show_sql: true
         format_sql: true
+    open-in-view: true
 
 
   mail:
